# PHYS461-Final-Project

./: .gitignore  README.md  fd.py  pyproject.toml  requirements.txt  rk4.py  solver.py  starNum.py  state.py
