[tool.poetry]
name = "solution"
version = "0.1.0"
description = ""
authors = ["niduzi"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "1.21.5"
pandas = "1.3.5"
scipy = "1.7.3"
matplotlib = "3.5.3"
seaborn = "0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
